--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+        font-family: 'Rubik', sans-serif;
+        font-size: 18px;
+        @apply text-dark-gray;
+    }
+
+    .container {
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+
+    h1 {
+        @apply text-2xl font-medium;
+    }
+
+}
